fix:UploadMaterialControllerTest(#145)